# life-track

./: .gitignore  README.md  main.py  pyproject.toml  run_life_track.sh
model/: Event.py  Events.py  LifeTrack.py  SpotifyEpisode.py  SpotifyPodcast.py  __init__.py
src/: __init__.py  access_google_calendar.py  access_spotify.py  send_email.py
test/: explore_google_calendar.ipynb  spotify_api.ipynb  test_life_track.ipynb
