[project]
name = "life-track"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "google>=3.0.0",
    "google-api-python-client>=2.175.0",
    "google-auth-oauthlib>=1.2.2",
    "ipykernel>=6.29.5",
    "keyring>=25.6.0",
    "spotipy>=2.25.1",
    "yagmail>=0.15.293",
]
